--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,12 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <scm>
+        <connection>scm:git:https://github.com/wso2-extensions/esb-connector-gmailrest.git</connection>
+        <url>https://github.com/wso2-extensions/esb-connector-gmailrest.git</url>
+        <developerConnection>scm:git:https://github.com/wso2-extensions/esb-connector-gmailrest</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
     <build>
         <plugins>
             <plugin>
