--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,12 @@
  ~  under the License.
 -->
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.wso2.carbon.connector</groupId>
     <artifactId>org.wso2.carbon.connector.gmailrest</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
     <name>WSO2 Carbon - Mediation Library Connector For Gmail Rest</name>
     <url>http://wso2.org</url>
     <properties>
@@ -152,7 +150,8 @@
     <scm>
         <connection>scm:git:https://github.com/wso2-extensions/esb-connector-gmailrest.git</connection>
         <url>https://github.com/wso2-extensions/esb-connector-gmailrest.git</url>
-        <developerConnection>scm:git:https://github.com/wso2-extensions/esb-connector-gmailrest</developerConnection>
+        <developerConnection>scm:git:https://github.com/wso2-extensions/esb-connector-gmailrest
+        </developerConnection>
         <tag>HEAD</tag>
     </scm>
     <build>
