--- a/src/test/resources/artifacts/ESB/connector/config/gmail.properties
+++ b/src/test/resources/artifacts/ESB/connector/config/gmail.properties
@@ -10,6 +10,7 @@ refreshToken=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 accessToken=ya29.CjLpAjiKArjaBTLTTvvUaX9qRHeM-3MloteZgCn1C-ODR0xHXpVjOhSI2chxwHI6Bh_RdQ
 apiVersion=v1
 accessTokenRegistryPath=
+contentType=text/html; charset=UTF-8
 
 recipientsSet1=tharis63@outlook.com
 recipientsSet2=tharis63@outlook.com
