Resolved https://github.com/wso2-extensions/esb-connector-gmail/issues/32

--- a/src/test/resources/artifacts/ESB/connector/config/gmail.properties
+++ b/src/test/resources/artifacts/ESB/connector/config/gmail.properties
@@ -4,10 +4,10 @@ requestDirectoryRelativePath=/../src/test/resources/artifacts/ESB/config/restReq
 
 apiUrl=https://www.googleapis.com/gmail
 userId=tharis63@gmail.com
-clientId=592473284170-upbhlaj85i46llqjdo7evm4628v9a6qs.apps.googleusercontent.com
-clientSecret=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-refreshToken=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-accessToken=ya29.CjLpAjiKArjaBTLTTvvUaX9qRHeM-3MloteZgCn1C-ODR0xHXpVjOhSI2chxwHI6Bh_RdQ
+clientId=xxxxxxxxxxxx-upbhlaj85i46llqjdo7evm4628v9a6qs.apps.googleusercontent.com
+clientSecret=xxxxxxxxxxxxxxxxxxx
+refreshToken=1/xxxxxxxxxxxxxxxxxx-w1daR7GOuLhy8-FBLtkz7xiHM7H06Qo
+accessToken=ya29.xxxxxxxxxxxxxxxxxxx
 apiVersion=v1
 accessTokenRegistryPath=
 contentType=text/html; charset=UTF-8
