--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <groupId>org.wso2.carbon.connector</groupId>
     <artifactId>org.wso2.carbon.connector.gmail</artifactId>
     <packaging>jar</packaging>
-    <version>3.0.6</version>
+    <version>3.0.7-SNAPSHOT</version>
     <name>WSO2 Carbon - Mediation Library Connector For Gmail</name>
     <url>http://wso2.org</url>
     <properties>
