--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,12 @@
     <groupId>org.wso2.carbon.connector</groupId>
     <artifactId>org.wso2.carbon.connector.gmail</artifactId>
     <packaging>jar</packaging>
-    <version>3.0.8-SNAPSHOT</version>
+    <version>3.0.8</version>
     <name>WSO2 Carbon - Mediation Library Connector For Gmail</name>
     <url>http://wso2.org</url>
     <properties>
         <connector.name>gmail</connector.name>
-        <product.ei.version>6.5.0-m5-SNAPSHOT</product.ei.version>
+        <product.ei.version>6.5.0</product.ei.version>
         <carbon.kernel.version>4.4.38</carbon.kernel.version>
         <automation.framework.utils.version>4.4.2</automation.framework.utils.version>
         <automation.framework.version>4.4.3</automation.framework.version>
