--- a/.github/workflows/update-meta-json.yml
+++ b/.github/workflows/update-meta-json.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.WSO2_INTEGRATION_BOT_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -28,6 +29,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ steps.get-default-branch.outputs.default_branch }}
+          token: ${{ secrets.WSO2_INTEGRATION_BOT_TOKEN }}
 
       - name: Update meta.json with parameters
         run: |
